--- a/index.html
+++ b/index.html
@@ -29,22 +29,22 @@
 
             <div class="first_inner_layout">
                 <img class="gallery_img" src="images/test3.jpg" alt="Test Foto Unsplash">
-                <p class="img_description">copyright: Valentin Pohl</p>
+                <p class="img_description">source: unsplash.com</p>
             </div>
 
             <div class="inner_layout">
                 <img class="gallery_img" src="images/test2.jpg" alt="Test Foto Unsplash">
-                <p class="img_description"> copyright: Valentin Pohl</p>
+                <p class="img_description">source: unsplash.com</p>
             </div>
 
             <div class="inner_layout">
                 <img class="gallery_img" src="images/test3.jpg" alt="Test Foto Unsplash">
-                <p class="img_description"> copyright: Valentin Pohl</p>
+                <p class="img_description">source: unsplash.com</p>
             </div>
 
             <div class="inner_layout">
                 <img class="gallery_img" src="images/test4.jpg" alt="Test Foto Unsplash">
-                <p class="img_description"> copyright: Valentin Pohl</p>
+                <p class="img_description">source: unsplash.com</p>
             </div>
         </div>
 
